# magdeburger-spielplatznadel

./: .gitignore  elm-pkg-js-includes.js  elm.json  flake.nix  head.html  lamdera.nix  readme.md
.github/workflows/: main.yml
apps/: spin.toml
apps/backend/: Cargo.toml
apps/backend/src/: lib.rs  main.rs
apps/frontend/: dev.bash  elm.js  elm.json  flake.nix  index.html
apps/frontend/assets/css/: app.css
apps/frontend/src/: Main.elm
apps/lamdera/: head.html
apps/lamdera/public/: custom_elements.js  manifest.json
apps/lamdera/public/assets/css/: app.css
apps/lamdera/src/: Types.elm
apps/lamdera/src/Evergreen/V1/: Types.elm
apps/web/public/: service_worker.js
apps/web/src/: Main.elm
elm-pkg-js/: .env  geo-location.js  index.js  share.js  storage.js
lamdera/: elm.json  head.html
lamdera/elm-pkg-js/: index.js
lamdera/src/: Frontend.elm  Types.elm
public/: custom_elements.js  manifest.json  service_worker.js
public/assets/css/: app.css
src/: Backend.elm  Common.elm  Env.elm  Frontend.elm  IdSet.elm  Main.elm  Types.elm
src/Evergreen/Migrate/: V10.elm  V2.elm  V6.elm
src/Evergreen/V10/: Animator.elm  IdSet.elm  Types.elm
src/Evergreen/V10/Internal/: Time.elm  Timeline.elm
src/Evergreen/V2/: Types.elm
src/Evergreen/V6/: Types.elm
src/Evergreen/V8/: Types.elm
