[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
image = "0.25.5"
log = "0.4.22"
once_cell = "1.20.2"
salvo = { version = "0.74.2", features = ["acme", "anyhow", "oapi", "quinn"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["macros"] }
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v4"] }
